# Diff-Check-AI

./: CMakeLists.txt  DiffCheckAI.qrc  DiffCheckAI.txt  README.md  clean-build.cmd  src2txt.cmd
src/: CompareEngine.cpp  CompareEngine.h  Config.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  main.cpp
tests/: test_settings.cpp
translations/: DiffCheckAI_en.ts  DiffCheckAI_es.ts
